# chaldea-parser

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json  requirements.dev.txt  requirements.txt
.github/workflows/: atlas.yml  cache_download.yml  cache_upload.yml  debug.yml  wiki.yml
scripts/: _dir.py  _gs.py  assets_listing.py  const_data_dart.py  dev_dist.py  enemy_skill_td.py  format.sh  gacha.py  gacha_cn.py  replace_banner_url.py  sheet.py  skill_transl.py  update_api_dep.sh  update_deps.sh
src/: config.py
src/parsers/: __init__.py  data.py  domus_aurea.py  domus_aurea_data.py  helper.py  main_parser.py  misc.py  update_mapping.py  wiki_parser.py
src/parsers/core/: aa_export.py  const_data.py  dump.py  mm.py  quest.py  ticket.py
src/parsers/core/mapping/: autofill.py  common.py  official.py  wiki.py
src/parsers/wiki/: replace_banner_url.py
src/schemas/: __init__.py  common.py  const_data.py  data.py  drop_data.py  gamedata.py  mappings.py  wiki_cache.py  wiki_data.py
src/utils/: __init__.py  discord.py  helper.py  http_cache.py  log.py  nullsafe.py  stopwatch.py  url.py  worker.py
src/wiki/: __init__.py  template.py  wiki_tool.py
