[tool.poetry]
name = "chaldea-parser"
version = "1.0.0"
description = "Chaldea parser"
authors = ["narumi"]

[tool.poetry.dependencies]
python = "^3.11"
mwclient = "^0.10.1"
mwparserfromhell = "^0.6.4"
pandas = "^1.3.4"
pywikibot = "^7.0.0"
ratelimit = "^2.2.1"
requests = "^2.26.0"
requests-cache = "^0.9.3"
wikitextparser = "^0.48.0"
pydantic = "^1.9.0"
orjson = "^3.7.2"
python-dotenv = "^0.21.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
fgo-game-data-api = { git = "https://github.com/chaldea-center/fgo-game-data-api.git" }
iPython = "^8.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pyperclip = "^1.8.2"
packaging = "^21.3"

[tool.isort]
line_length = 88
known_third_party = "orjson"
multi_line_output = 3
force_grid_wrap = 0
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true

[tool.black]
target-version = ['py39']

[tool.mypy]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"

follow_imports = "normal"
show_column_numbers = true

# mypy strict options
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["fastapi_cache.*"]
no_implicit_reexport = false
ignore_missing_imports = true

[tool.pylint.MASTER]
extension-pkg-whitelist = "orjson,pydantic"

[tool.pylint.'MESSAGES CONTROL']
disable = "duplicate-code,invalid-name,line-too-long,logging-fstring-interpolation,missing-docstring,no-else-return,raise-missing-from,too-few-public-methods,too-many-arguments,too-many-branches,too-many-instance-attributes,too-many-lines,too-many-locals,too-many-nested-blocks,too-many-statements,wrong-import-order"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.masonry.api"
